--- a/Index.html
+++ b/Index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abyss Forge Gym</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="Css/Style.css">
+    <link rel="stylesheet"  href="Css/Style.css">
 </head>
 <body>
-
+<!-- Header menu Section -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="Img/Abyss.png" class="logo"></a>
@@ -17,7 +17,7 @@
             </button>
             <div class="collapse navbar-collapse alinear" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#planes">Planes y servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/PlanesyServicios.html">Planes y servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#entrenadores">Entrenadores</a></li>
                     <li class="nav-item"><a class="nav-link" href="#entrenadores"><img src="Img/carrito.png" class="imgNav"></a></li>
@@ -36,7 +36,7 @@
             <a href="#" class="btn">¡Inscríbete ya!</a>
         </div>
     </header>
-
+<!-- Footer Section -->
     <footer>
         <h2>SÍGUENOS</h2>
             <div>
@@ -44,7 +44,7 @@
                 <a href=""><img src="Img/tiktok.png">TikTok</a>
                 <a href=""><img src="Img/youtube.png">YouTube</a>
             </div>
-        <h5>©2025 Abyss Forge Gym. Todos los derechos reservados.</h5>
+        <h5 class="footerderechos">©2025 Abyss Forge Gym. Todos los derechos reservados.</h5>
     </footer>
 
     
