Desarrollo Pagina Productos
AAAAAAAAA

--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item"><a class="nav-link" href="Paginas/planesyservicios.html">Planes y servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/productos.html">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#entrenadores">Entrenadores</a></li>
                     <li class="nav-item"><a class="nav-link" href="#carrito"><img src="Img/carrito.png" class="imgNav"></a></li>
                     <li class="nav-item"><a class="nav-link" href="#perfil"><img src="Img/perfil.png" class="imgNav"></a></li>
@@ -27,7 +27,6 @@
             </div>
         </div>
     </nav>
-
     <header>
         <div class="position-relative">
             <img src="Img/principal.png" class="imgPrincipal">
