--- a/Paginas/planesyservicios.html
+++ b/Paginas/planesyservicios.html
@@ -18,8 +18,8 @@
       </button>
       <div class="collapse navbar-collapse alinear" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="">Planes y servicios</a></li>
-          <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
+          <li class="nav-item"><a class="nav-link" href="../Paginas/planesyservicios.html">Planes y servicios</a></li>
+          <li class="nav-item"><a class="nav-link" href="../Paginas/productos.html">Productos</a></li>
           <li class="nav-item"><a class="nav-link" href="#entrenadores">Entrenadores</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><img src="../Img/carrito.png" class="imgNav"></a></li>
           <li class="nav-item"><a class="nav-link" href="#"><img src="../Img/perfil.png" class="imgNav"></a></li>
