Se finalizo pagina de inico de sesion

--- a/Paginas/planesyservicios.html
+++ b/Paginas/planesyservicios.html
@@ -18,11 +18,11 @@
       </button>
       <div class="collapse navbar-collapse alinear" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="">Planes y servicios</a></li>
-          <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
-          <li class="nav-item"><a class="nav-link" href="#entrenadores">Entrenadores</a></li>
-          <li class="nav-item"><a class="nav-link" href="#"><img src="../Img/carrito.png" class="imgNav"></a></li>
-          <li class="nav-item"><a class="nav-link" href="#"><img src="../Img/perfil.png" class="imgNav"></a></li>
+          <li class="nav-item"><a class="nav-link" >Planes y servicios</a></li>
+          <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+          <li class="nav-item"><a class="nav-link" href="entrenadores.html">Entrenadores</a></li>
+          <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.png" class="imgNav"></a></li>
+          <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.png" class="imgNav"></a></li>
         </ul>
       </div>
     </div>
