--- a/Index.html
+++ b/Index.html
@@ -19,10 +19,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item"><a class="nav-link" href="Paginas/planesyservicios.html">Planes y servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#entrenadores">Entrenadores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#carrito"><img src="Img/carrito.png" class="imgNav"></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#perfil"><img src="Img/perfil.png" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/entrenadores.html">Entrenadores</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/compras.html"><img src="Img/carrito.png" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/iniciosesion.html"><img src="Img/perfil.png" class="imgNav"></a></li>
                 </ul>
             </div>
         </div>
