--- a/Paginas/CrearCuenta.html
+++ b/Paginas/CrearCuenta.html
@@ -31,14 +31,14 @@
   <!-- Seccion inicio de sesion -->
 <div class="login-container">
     <div class="form-section">
-      <h2 class="titulo"><b>Inicio de sesión</b></h2>
+      <h2 class="titulo"><b>Crear Cuenta</b></h2>
   
       <input type="text" class="form-control mb-3 input-field" placeholder="Usuario">
       <input type="password" class="form-control mb-4 input-field" placeholder="Contraseña">
   
       <div class="d-flex justify-content-between w-100">
-        <a href="CrearCuenta.html" class="link">Crear cuenta</a>
-        <a href="perfil.html" class="btn btn-custom">Iniciar sesión</a>
+        <a href="iniciosesion.html" class="link">Iniciar Sesion</a>
+        <a href="perfil.html" class="btn btn-custom">Crear Cuenta</a>
       </div>
     </div>
   
@@ -46,21 +46,3 @@
       <img src="../Img/login.png" alt="Imagen gimnasio">
     </div>
   </div>
-  
-  
-
-
-  <!-- Footer -->
-  <footer>
-    <h2>SÍGUENOS</h2>
-    <div>
-      <a href=""><img src="../Img/insta.png">Instagram</a>
-      <a href=""><img src="../Img/tiktok.png">TikTok</a>
-      <a href=""><img src="../Img/youtube.png">YouTube</a>
-    </div>
-    <h5 class="footerderechos">©2025 Abyss Forge Gym. Todos los derechos reservados.</h5>
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
