--- a/Paginas/planesyservicios.html
+++ b/Paginas/planesyservicios.html
@@ -4,29 +4,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Abyss Forge Gym</title>
+  <link rel="shortcut icon" href="../Img/Abyss.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../Css/PlanesStyle.css">
+  <link rel="stylesheet" href="../Css/BarraNavYfooter.Css">
 </head>
 <body>
 
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.png" class="logo"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse alinear" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="../Paginas/planesyservicios.html">Planes y servicios</a></li>
-          <li class="nav-item"><a class="nav-link" href="../Paginas/productos.html">Productos</a></li>
-          <li class="nav-item"><a class="nav-link" href="#entrenadores">Entrenadores</a></li>
-          <li class="nav-item"><a class="nav-link" href="#"><img src="../Img/carrito.png" class="imgNav"></a></li>
-          <li class="nav-item"><a class="nav-link" href="#"><img src="../Img/perfil.png" class="imgNav"></a></li>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.png" class="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto align-items-center">
+                <li class="nav-item"><a class="nav-link" href="">Planes y servicios</a></li>
+                <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+                <li class="nav-item"><a class="nav-link" href="entrenadores.html">Entrenadores</a></li>
+                <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.png" class="imgNav"></a></li>
+                <li class="nav-item"><a class="nav-link" href="perfil.html"><img src="../Img/perfil.png" class="imgNav"></a></li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
 
   <!-- Titulo -->
   <header class="header-title">
