--- a/Index.html
+++ b/Index.html
@@ -7,12 +7,13 @@
     <link rel="shortcut icon" href="Img/Abyss.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet"  href="Css/Style.css">
+    <link rel="stylesheet" href="Css/BarraNavYfooter.Css">
 </head>
 <body>
 <!-- Header menu Section -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="Img/Abyss.png" class="logo"></a>
+            <a class="navbar-brand" href=""><img src="Img/Abyss.png" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -20,9 +21,9 @@
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item"><a class="nav-link" href="Paginas/planesyservicios.html">Planes y servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="Paginas/productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#entrenadores">Entrenadores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#carrito"><img src="Img/carrito.png" class="imgNav"></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#perfil"><img src="Img/perfil.png" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/entrenadores.html">Entrenadores</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/compras.html"><img src="Img/carrito.png" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/perfil.html"><img src="Img/perfil.png" class="imgNav"></a></li>
                 </ul>
             </div>
         </div>
