--- a/Paginas/productos.html
+++ b/Paginas/productos.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos Potenciadores</title>
+    <link rel="shortcut icon" href="../Img/Abyss.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../Css/Productos.css">
+    <link rel="stylesheet" href="../Css/BarraNavYfooter.Css">
+
 </head>
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">                  
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.png" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse alinear" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="../Paginas/planesyservicios.html">Planes y servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#productos">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#entrenadores">Entrenadores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#entrenadores"><img src="../Img/carrito.png" class="imgNav"></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#entrenadores"><img src="../Img/perfil.png" class="imgNav"></a></li>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto align-items-center">
+                    <li class="nav-item"><a class="nav-link" href="planesyservicios.html">Planes y servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="entrenadores.html">Entrenadores</a></li>
+                    <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.png" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="perfil.html"><img src="../Img/perfil.png" class="imgNav"></a></li>
                 </ul>
             </div>
         </div>
