--- a/Paginas/perfil.html
+++ b/Paginas/perfil.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Perfiles</title>
     <link rel="shortcut icon" href="../Img/Abyss.png">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../Css/BarraNavYfooter.Css">
+    <link rel="stylesheet" href="../Css/perfil.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -26,6 +27,40 @@
             </div>
         </div>
     </nav>
-    
+
+    <section class="imagen-gimnasio">
+      <img src="../Img/fondo_perfil.png" alt="Gimnasio" />
+    </section>
+    <section class="seccion-usuario">
+    <div class="usuario-contenedor">
+      <div class="avatar-usuario">
+        <img src="../Img/foto_perfil.png" alt="Usuario" />
+        <h2>Usuario</h2>
+    </div>
+    <div class="info-plan">
+        <h3>Plan: Dark Steel</h3>
+           <p>
+              El fuego del abismo endurece a los guerreros más decididos. Con este plan,
+              accedes a entrenamientos avanzados, áreas especializadas y asesoramiento para
+              potenciar tu fuerza y resistencia. Aquí es donde el hierro se convierte en acero.
+           </p>
+        <button class="btn-renovar">¡Renueva o actualiza tu plan!</button>
+    </div>
+    <div class="cerrar-sesion">
+      <button class="btn-cerrar">Cerrar sesión</button>
+      </div>
+    </div>
+  </section>
+  
+<footer>
+    <h2>SÍGUENOS</h2>
+        <div>
+            <a href=""><img src="../Img/insta.png">Instagram</a>
+            <a href=""><img src="../Img/tiktok.png">TikTok</a>
+            <a href=""><img src="../Img/youtube.png">YouTube</a>
+        </div>
+    <h5>©2025 Abyss Forge Gym. Todos los derechos reservados.</h5>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
