--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
                     <li class="nav-item"><a class="nav-link" href="Paginas/productos.html">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="Paginas/entrenadores.html">Entrenadores</a></li>
                     <li class="nav-item"><a class="nav-link" href="Paginas/compras.html"><img src="Img/carrito.png" class="imgNav"></a></li>
-                    <li class="nav-item"><a class="nav-link" href="Paginas/perfil.html"><img src="Img/perfil.png" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/iniciosesion.html"><img src="Img/perfil.png" class="imgNav"></a></li>
                 </ul>
             </div>
         </div>
@@ -34,7 +34,7 @@
             <div class="position-absolute top-50 start-50 translate-middle text-center">
                 <h1 class="TituloPrincipal"><b>ABYSS FORGE GYM</b></h1>
                 <p class="textoPrincipal"> <br>No temas al abismo... <br> forja tu fuerza en la oscuridad, resurge como leyenda <br><br></p>
-                <a href="#" class="btn">¡Inscríbete ya!</a>
+                <a href="Paginas/planesyservicios.html" class="btn">¡Inscríbete ya!</a>
             </div>
         </div>
     </header>
@@ -85,8 +85,8 @@
                     <div class="TextoCompacto">
                         <p class="textoPrincipal">Encuentra todos los detalles que los diferentes planes de nuestro gimnasio pueden ofrecerte, ¡anímate a conocer nuestras ofertas!</p>
                         <br>
-                        <br>
-                        <button class="btn">Planes y servicios</button>
+                        <br>   
+                        <a href="Paginas/planesyservicios.html" class="btn">Planes y servicios</a>
                     </div>
                 </div>
         
