--- a/Paginas/planesyservicios.html
+++ b/Paginas/planesyservicios.html
@@ -23,7 +23,7 @@
                 <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
                 <li class="nav-item"><a class="nav-link" href="entrenadores.html">Entrenadores</a></li>
                 <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.png" class="imgNav"></a></li>
-                <li class="nav-item"><a class="nav-link" href="perfil.html"><img src="../Img/perfil.png" class="imgNav"></a></li>
+                <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.png" class="imgNav"></a></li>
             </ul>
         </div>
     </div>
