--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,8 @@
     <title>Abyss Forge Gym</title>
     <link rel="shortcut icon" href="Img/Abyss.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet"  href="Css/Style.css">
-    <link rel="stylesheet" href="Css/BarraNavYfooter.Css">
+    <link rel="stylesheet" href="Css/EstructuraPags.Css">
+    <link rel="stylesheet" href="Css/PagPrincipal.css">
 </head>
 <body>
 <!-- Header menu Section -->
