--- a/Paginas/CrearCuenta.html
+++ b/Paginas/CrearCuenta.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Abyss Forge Gym</title>
+  <title>Crear</title>
+  <link rel="shortcut icon" href="../Img/Abyss.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../Css/EstructuraPags.Css">
   <link rel="stylesheet" href="../Css/InicioSesion.css">
 </head>
 <body>
