--- a/Paginas/compras.html
+++ b/Paginas/compras.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abyss Forge Gym</title>
+    <title>Carrito</title>
     <link rel="shortcut icon" href="Img/Abyss.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet"  href="../Css/Compras.Css">
-    <link rel="stylesheet" href="../Css/BarraNavYfooter.Css">
+    <link rel="stylesheet" href="../Css/EstructuraPags.Css">
+    <link rel="stylesheet" href="../Css/Compras.Css">
 </head>
 <body>
 
@@ -39,13 +39,13 @@
     <!-- tipo plan 1 -->
     <div class="d-flex justify-content-between align-items-center bg-dark text-white rounded p-3 mb-3 producto">
       <div class="d-flex align-items-center">
-        <img src="" class="imagen-item">
+        <img src="../Img/Plan_AbyssEntry.webp" class="imagen-item">
         <div>
-          <h5 class="mb-1">Plan: Abyss Entry</h5>
-          <div class="d-flex align-items-center">
-            <button class="btn btn-outline-light btn-sm me-2">-</button>
-            <span>1</span>
-            <button class="btn btn-outline-light btn-sm ms-2">+</button>
+          <h5 class="mb-1 nombreProducto">Plan: Abyss Entry</h5>
+          <div class="d-flex align-items-center gap-2">
+            <button class="btn"> - </button>
+            <span> 1 </span>
+            <button class="btn"> + </button>
           </div>
         </div>
       </div>
@@ -61,10 +61,10 @@
         <img src="../Img/Proteina.webp" class="imagen-item">
         <div>
           <h5 class="mb-1">Proteína</h5>
-          <div class="d-flex align-items-center">
-            <button class="btn btn-outline-light btn-sm me-2">-</button>
+          <div class="d-flex align-items-center gap-2">
+            <button class="btn"> - </button>
             <span>1</span>
-            <button class="btn btn-outline-light btn-sm ms-2">+</button>
+            <button class="btn"> + </button>
           </div>
         </div>
       </div>
@@ -80,10 +80,10 @@
         <img src="../Img/Creatinaxd.webp" class="imagen-item">
         <div>
           <h5 class="mb-1">Creatina</h5>
-          <div class="d-flex align-items-center">
-            <button class="btn btn-outline-light btn-sm me-2">-</button>
+          <div class="d-flex align-items-center gap-2">
+            <button class="btn"> - </button>
             <span>1</span>
-            <button class="btn btn-outline-light btn-sm ms-2">+</button>
+            <button class="btn"> + </button>
           </div>
         </div>
       </div>
@@ -99,10 +99,10 @@
         <img src="../Img/pre-entreno.webp" class="imagen-item">
         <div>
           <h5 class="mb-1">Pre-entreno</h5>
-          <div class="d-flex align-items-center">
-            <button class="btn btn-outline-light btn-sm me-2">-</button>
+          <div class="d-flex align-items-center gap-2">
+            <button class="btn"> - </button>
             <span>1</span>
-            <button class="btn btn-outline-light btn-sm ms-2">+</button>
+            <button class="btn"> + </button>
           </div>
         </div>
       </div>
