--- a/Paginas/entrenadores.html
+++ b/Paginas/entrenadores.html
@@ -6,8 +6,8 @@
     <title>Entrenadores</title>
     <link rel="shortcut icon" href="../Img/Abyss.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Css/Style.css">
-    <link rel="stylesheet" href="../Css/BarraNavYfooter.Css">
+    <link rel="stylesheet" href="../Css/EstructuraPags.Css">
+    <link rel="stylesheet" href="../Css/Coaches.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -21,15 +21,15 @@
                     <li class="nav-item"><a class="nav-link" href="planesyservicios.html">Planes y servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Entrenadores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#carrito"><img src="../Img/carrito.webp" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.webp" class="imgNav"></a></li>
                     <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.webp" class="imgNav"></a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <section class="pagSecundaria">
-        <h1 class="tituloSecPrincipal">Entrenadores</h1>
+    <section class="header-title">
+        <h1 class="Titulo"><b>Entrenadores</b></h1>
         <div class="container">
             <div class="row">
                 <div class="col-md-4 TextoCompacto">
@@ -57,7 +57,7 @@
     </section>
 
     <section>
-        <h1 class="tituloSecPrincipal">Conoce sus horarios</h1>
+        <h1 class="tituloHorario">Conoce sus horarios</h1>
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 TextoCompacto row">
