--- a/Paginas/productos.html
+++ b/Paginas/productos.html
@@ -6,8 +6,8 @@
     <title>Productos Potenciadores</title>
     <link rel="shortcut icon" href="../Img/Abyss.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../Css/EstructuraPags.Css">
     <link rel="stylesheet" href="../Css/Productos.css">
-    <link rel="stylesheet" href="../Css/BarraNavYfooter.Css">
 
 </head>
 <body>
@@ -93,7 +93,7 @@
               <img src="../Img/pre-entreno.webp" class="img-fluid" alt="Proteína">
       </div>
       </div>
-      <div class="product-info text-white">
+      <div class="product-info text-white align-items-center">
           <h3 class="fw-bold">Pre-entreno</h3>
           <p class="mb-4">
             Aumenta tu rendimiento con creatina pura, diseñada para mejorar la fuerza explosiva, acelerar la recuperación
