--- a/Paginas/perfil.html
+++ b/Paginas/perfil.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../Css/perfil.css">
 </head>
 <body>
+
+    <!--Header menu Section-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.webp" class="logo"></a>
@@ -28,6 +30,7 @@
         </div>
     </nav>
 
+    <!--Imagen Perfil-->
     <section class="imagen-gimnasio">
       <img src="../Img/fondo_perfil.webp" alt="Gimnasio" />
     </section>
@@ -37,6 +40,8 @@
         <img src="../Img/foto_perfil.webp" alt="Usuario" />
         <h2>Usuario</h2>
     </div>
+
+    <!--Informacion Plan Usuario-->
     <div class="info-plan">
         <h3>Plan: Dark Steel</h3>
            <p>
@@ -46,14 +51,17 @@
            </p>
         <button class="btn-renovar">¡Renueva o actualiza tu plan!</button>
     </div>
+
+    <!--Boton Cerrar Sesión-->
     <div class="cerrar-sesion">
       <button class="btn-cerrar">Cerrar sesión</button>
       </div>
     </div>
   </section>
-  
+
+    <!--Footer-->
 <footer>
-    <h2>SÍGUENOS</h2>
+      <h2>SÍGUENOS</h2>
         <div>
             <a href=""><img src="../Img/insta.webp">Instagram</a>
             <a href=""><img src="../Img/tiktok.webp">TikTok</a>
