--- a/Paginas/productos.html
+++ b/Paginas/productos.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+    <!--Header menu Section-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.webp" class="logo"></a>
@@ -29,10 +30,12 @@
         </div>
     </nav>
 
+    <!--Titulo-->
     <header class="header-title">
       <h1 class="Titulo"><b>Productos Potenciadores</b></h1>
     </header>
 
+    <!--Producto 1-->
     <section class="container my-5">
       <div class="product-card d-flex flex-column flex-md-row align-items-center justify-content-center">
         <div class="product-image-container position-relative mb-4 mb-md-0 me-md-5">
@@ -55,6 +58,7 @@
       </div>
     </section>
 
+    <!--Producto 2-->
     <section class="seccion-creatina">
       <div class="container">
         <div class="row align-items-center">
@@ -85,6 +89,7 @@
       </div>
     </section>
 
+    <!--Producto 3-->
     <section class="container my-5">
       <div class="product-card d-flex flex-column flex-md-row align-items-center justify-content-center">
         <div class="product-image-container position-relative mb-4 mb-md-0 me-md-5">
@@ -106,6 +111,7 @@
       </div>
     </section>
 
+     <!--Footer-->
     <footer>
         <h2>SÍGUENOS</h2>
             <div>
