Pagina Completada al 99,1 %
ola

--- a/Paginas/productos.html
+++ b/Paginas/productos.html
@@ -39,11 +39,10 @@
     <section class="container my-5">
       <div class="product-card d-flex flex-column flex-md-row align-items-center justify-content-center">
         <div class="product-image-container position-relative mb-4 mb-md-0 me-md-5">
-          <div class="background-layer"></div>
-            <div class="image-layer">
-              <img src="../Img/Proteina.webp" class="img-fluid" alt="Proteína">
-      </div>
-      </div>
+          <div class="image-layer">
+            <img src="../Img/Producto1.webp" class="img-fluid" alt="Proteína">
+          </div>
+        </div>
       <div class="product-info text-white">
           <h3 class="fw-bold">Proteína</h3>
           <p class="mb-4">
@@ -52,7 +51,7 @@
              alcanzar tus objetivos de fuerza y definición.
           </p>
           <div class="d-flex justify-content-center">
-          <a href="#" class="btn btn-warning fw-bold ">Comprar</a>
+          <a href="compras.html" class="btn btn-warning fw-bold ">Comprar</a>
           </div>
         </div>
       </div>
@@ -72,19 +71,15 @@
             </p>
 
             <div class="contenedor-boton d-flex justify-content-center">
-              <a href="#" class="btn btn-warning boton-comprar">Comprar</a>
+              <a href="compras.html" class="btn btn-warning boton-comprar">Comprar</a>
             </div>
           </div>
     
           <div class="col-md-6 d-flex justify-content-center">
-            <div class="contenedor-imagen">
-              <div class="fondo-amarillo"></div>
               <div class="imagen-creatina">
-                <img src="../Img/Creatinaxd.webp" alt="Creatina">
+                <img src="../Img/Producto2.webp" alt="Creatina">
               </div>
-            </div>
           </div>
-    
         </div>
       </div>
     </section>
@@ -93,9 +88,8 @@
     <section class="container my-5">
       <div class="product-card d-flex flex-column flex-md-row align-items-center justify-content-center">
         <div class="product-image-container position-relative mb-4 mb-md-0 me-md-5">
-          <div class="background-layer"></div>
             <div class="image-layer">
-              <img src="../Img/pre-entreno.webp" class="img-fluid" alt="Proteína">
+              <img src="../Img/Producto3.webp" class="img-fluid" alt="Proteína">
       </div>
       </div>
       <div class="product-info text-white align-items-center">
@@ -105,7 +99,7 @@
             y maximizar la resistencia muscular. Perfecta para quienes buscan llevar su entrenamiento al siguiente nivel.
           </p>
           <div class="d-flex justify-content-center">
-          <a href="#" class="btn btn-warning fw-bold ">Comprar</a>
+          <a href="compras.html" class="btn btn-warning fw-bold ">Comprar</a>
           </div>
         </div>
       </div>
